# CPPTest

./: .bazelignore  .bazelrc  .clang-tidy  .gitignore  .gitpod.yml  BUILD  BUILD.bazel  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  index.md  main.cpp  renovate.json
.clangd/index/: array.hpp.5962CC3F6822F9A1.idx  test.hpp.FCE39C5657F554ED.idx
.devcontainer/: Dockerfile  devcontainer.json  install_llvm.sh
.github/workflows/: AutoMerge.yml  CI.yml  blank.yml  codeql-analysis.yml
.swm/: addressbook.c4nqo.sw.md  swimm.json
CMakeProject/: .gitignore  .gitpod.yml  CMakeLists.txt  README.md
CMakeProject/.devcontainer/: Dockerfile  devcontainer.json
CMakeProject/.github/workflows/: CI.yml
CMakeProject/src/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.hpp  hello_world_main.cpp  test_hello_world.cpp
conan/: GCCDebug  gcc_debug  gcc_release
docs/: index.md
external_interface/: CMakeLists.txt
external_interface/addressbook/: BUILD  CMakeLists.txt  addressbook.proto
include/: test.hpp
src/: .clang-format  .clang-tidy  BUILD  CMakeLists.txt  cppcheck_suppressions.xml  main.cpp  test.cpp  test.hpp  test1.cpp
src/Tutorial/: CMakeLists.txt  CMakeUserPresets.json  Hello.hpp  Hello_test.cpp  conanfile.txt  main.cpp
src/applications/: CMakeLists.txt
src/applications/addressbook/: BUILD  CMakeLists.txt  addressbook.cpp  addressbook.hpp  addressbook_test.cpp  addressbook_test_integration.cpp
src/applications/copilot_demo/: BUILD  copilot_demo.cpp  copilot_demo.hpp  copilot_demo_main.cpp  copilot_demo_mainwindow.ui
src/applications/transitiveIncludes/: BUILD  bar.hpp  foo.cpp  foo.hpp
src/array/: BUILD  CMakeLists.txt  array.cpp  array.hpp  array_test.cpp
src/bad_test_demo/: BUILD  CMakeLists.txt  math_equations.cpp  math_equations.hpp  math_equations_test.cpp
src/design_patterns/: CMakeLists.txt  observer_pattern.cpp  observer_pattern.hpp  observer_pattern_itf.hpp  observer_pattern_test.cpp
src/design_patterns/abstract_factory/: CMakeLists.txt  abstract_factory.cpp  abstract_factory.hpp  abstract_factory_test.cpp  maze.cpp  maze.hpp
src/design_patterns/command_pattern/: CMakeLists.txt  command_pattern.cpp  command_pattern.hpp  command_pattern_itf.hpp  command_pattern_test.cpp  command_patternt_itf.hpp
src/design_patterns/iterator_pattern/: CMakeLists.txt  iterator_pattern.cpp  iterator_pattern.hpp  iterator_pattern_test.cpp
src/design_patterns/observer_pattern/: observer_pattern.cpp  observer_pattern_itf.hpp
src/design_patterns/proxy_pattern/: CMakeLists.txt  graphics.cpp  graphics.hpp  graphics_itf.hpp  image.cpp  image.hpp  image_0.txt  image_itf.hpp  image_proxy.cpp  image_proxy.hpp  proxy_pattern_test.cpp
src/design_patterns/state_pattern/: CMakeLists.txt  TCPClosed.cpp  TCPClosed.hpp  TCPConnection.cpp  TCPConnection.hpp  TCPOpen.cpp  TCPOpen.hpp  TCPState.cpp  TCPState.hpp  TCPStateItf.hpp  state_pattern.hpp  state_pattern_test.cpp
src/design_patterns/state_pattern_2/: CMakeLists.txt  TCPClosed.cpp  TCPClosed.hpp  TCPConnection.cpp  TCPConnection.hpp  TCPIdle.cpp  TCPIdle.hpp  TCPOpened.cpp  TCPOpened.hpp  TCPPaused.cpp  TCPPaused.hpp  TCPRunning.cpp  TCPRunning.hpp  TCPState.hpp  fsm.js  fsm_events.js  state_pattern_2_test.cpp
src/design_patterns/strategy_pattern/: CMakeLists.txt  strategy_pattern.cpp  strategy_pattern.hpp  strategy_pattern_test.cpp
src/static_analysis_demo/: BUILD  CMakeLists.txt  README.md  classDemo.cpp  classDemo.hpp  classDemoInterface.hpp  classDemo_test.cpp
src/tdd/: CMakeLists.txt  tdd.cpp  tdd_test.cpp
src/tutorial/: CMakeLists.txt  Hello.cpp  Hello.hpp  hello.cpp  hello.hpp  hello_test.cpp
toolchain/: BUILD  cc_toolchain_config.bzl
